Working on the results.

--- a/horton-era5.tex
+++ b/horton-era5.tex
@@ -211,56 +211,59 @@ The Continuous Ranked Probability Score \citep[CRPS,][]{Brown1974, Matheson1976,
 \end{equation}
 where $CRPS_{clim}$ is the CRPS value for the climatological distribution. A better prediction is characterized by an increase in CRPSS.
 
-The methods were here calibrated using the semi-automatic sequential procedure developed by \citet{Bontron2004} and also used in \citet{Radanovics2013} and \citet{BenDaoud2016}. A detailed description can also be found in \citet{Horton2019}. It allows calibrating the spatial windows on which the predictors are compared (specific to each level of analogy) and the number of analog dates to select for the different levels of analogy. The AtmoSwing software \citep{Horton2019} was used to perform this calibration independently for every station, method, and reanalysis. The calculations were performed on an HPC cluster at the University of Bern. 
+The methods were here calibrated using the semi-automatic sequential procedure developed by \citet{Bontron2004} and also used in \citet{Radanovics2013} and \citet{BenDaoud2016}. It allows calibrating the spatial windows on which the predictors are compared (specific to each level of analogy) and the number of analog dates to select for the different levels of analogy. The spatial windows are calibrated by incremental increases starting from the data point(s) with the highest skill. Increases are assessed in the four directions and the most skillful move is kept. The procedure stops when increasing the domain does not improve the skill. The number of analogs is calibrated for all levels of analogy jointly, once the spatial windows are calibrated, by assessing multiple combinations. A detailed description can be found in \citet{Horton2019}. 
 
-After the initial calibration of all AMs for ERA5, some issues were identified with the spatial windows. These were due to some limitations of the calibration procedure related to the high-resolution grid. The process was then restarted using an improvement of the semi-automatic procedure, named classic+ \citep{Horton2019}, which allows additional moves in the calibration of the spatial windows and thus allows escaping local minima. This issue is shown and discussed in section \ref{sec:results_hires}.
+After the initial calibration of all AMs for ERA5, some issues were identified with the spatial windows (shown and discussed in section \ref{sec:results_hires}). These were due to some limitations of the calibration procedure related to the high-resolution grid. The process was then restarted using an improvement of the semi-automatic procedure, named classic+ \citep{Horton2019}, which allows additional moves in the calibration of the spatial windows and thus allows escaping local minima. The additional moves are (1) an increase in two simultaneous directions, (2) a decrease in one or two simultaneous directions, (3) expansion or contraction (in every direction), (4) a shift of the window (without resizing) in eight directions (including diagonals), and finally (5) all the moves described above, but with a factor of 2, 3, or more (3 was considered as the maximum here). These additional moves can help jumping above local optima, but do not guarantee to result in the optimal spatial windows. Another advantage of the classic+ calibration is that it does not assess all points of the grid when processing the relevance map (identification of the most skilled point), which results in a substantial time saving.
+
+The AtmoSwing software \citep{Horton2019} was used to perform these calibrations. The calculations were performed on an HPC cluster at the University of Bern. The procedure was done independently for every station, method, and reanalysis. It means that the spatial windows and number of analogs differ from a reanalysis to another, and thus the selection of the analog dates will be impacted by these changes. The a priori selection of common spatial windows would not have been possible due to differences in grid resolutions (e.g. MERRA-2 does not overlap easily with the other grids) and it would not have been fair for reanalyses for which optimal windows differ from the pre-selected ones. With independent calibrations, all spatial windows should be optimal for the reanalysis at hand, and thus the comparison between the reanalyses fairer.
 
 
 \section{Results}
 \label{sec:results}
 
-The results are provided for the VP (independent validation period, section \ref{sec:precipitation}). All reanalyses were used at their highest available spatial resolution and at a 6-hourly time step. The impact of the spatial resolution is analyzed in section \ref{sec:results_hires}.
-
-\subsection{Impact on the skill}
-\label{sec:results_skill}
-
-The skill scores of the different methods and reanalyses are shown in Fig. \ref{fig:comparison_values}. As discussed in \citet{Horton2018b}, there are clear differences between methods with more complex AMs generally performing better, and also between reanalyses in favor of modern full-input reanalyses. One can see here that ERA5 is systematically in the best performing reanalyses. When isolating the impact of the reanalysis by removing the influence of the methods and the stations (Fig. \ref{fig:comparison_relative}), the positive contribution of ERA5 to the skill score is even more clear, with the largest difference for the method PT-2Z-4MI. One can also see a clear improvement compared to ERA-INT.
-
-ERA5 was selected as the best reanalysis for about 50\% of the stations on average, with a minimum of 34.9\% for 4Z and a maximum of 78.7\% for PT-2Z-4MI. When considering the first two ranks, ERA5 was selected 75\% on average, with a minimum of 61.8\% for PT-2Z-4W-4MI and a maximum of 91.7\% for PT-2Z-4MI. There were no specific spatial patterns as to which stations performed best with ERA5, such as it was the case with other reanalyses in \citet{Horton2018b}. Also, ERA-INT was not systematically superseded by ERA5, and ERA-INT remained the best choice for some stations and methods. It is thus important to undertake such a comparison with different AMs and multiple stations.
+The results are provided for the VP (independent validation period, section \ref{sec:precipitation}). All reanalyses were used at their highest available spatial resolution and at a 6-hourly time step. The results for the other reanalyses than ERA5 were taken from the work of \citet{Horton2018b}.
 
 
 \subsection{High resolution and its pitfalls}
 \label{sec:results_hires}
 
-Although the calibrations have been made on an HPC cluster, they ended up to be highly time-consuming when using the semi-automatic sequential procedure (classic calibration, Sect. \ref{sec:calibration}). The reason is that the process involves first the calculation of a relevance map for each level of analogy, which requires an assessment of every unitary cell of the predictor grid. Then, the spatial window in growing by assessing extensions in every four dimensions and by applying the one with the highest gain. On a high-resolution grid, these procedures imply numerous assessments.
+Although the calibrations have been made on an HPC cluster, they ended up to be highly time-consuming for ERA5 when using the classic calibration (Sect. \ref{sec:calibration}). The reason being that the process involves the calculation of a relevance map for each level of analogy, which requires an assessment of every unitary cell of the predictor grid, and the assessment of successive extensions of the spatial window in the four directions. On a high-resolution grid, these procedures imply numerous assessments.
 
-The first results of the calibration showed that ERA5 (grayed bars in Fig. \ref{fig:resolution}) underperformed ERA-INT. An examination of these results revealed that the spatial windows did not grow as much as expected and were not optimal. The reason being that the classic calibration got stuck in local minima during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue did not happen in a significant way for the other reanalyses and is here due to the high resolution of ERA5. The high resolution generates in a noisier response surface in terms of skill, with local minima that trap the classic calibration. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial windows, including increases of multiple grid points at once to get out of local minima. The classic+ calibration also ended up to be faster as it does not assess every grid point in the calculation of the relevance map. A global optimization technique, such as genetic algorithms \citep{Horton2017a}, would also efficiently overcome this issue. However, they are generally computationally intensive and too much time consuming for this comparison work. With the advent of high-resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets
+The first results of the calibration showed that ERA5 (grayed bars in Fig. \ref{fig:resolution}) underperformed ERA-INT. An analysis of the resulting parameters revealed that the spatial windows for Z were significantly smaller for ERA5 compared to the other reanalyses. For example, for 2Z, the mean zonal and meridional extents of the spatial windows were less than half those for ERA-INT. In general, the spatial windows for Z when using ERA5 were very small, and in contrast, the number of analogs were higher than for ERA-INT. The reason being that the classic calibration got stuck in local minima during the procedure of the spatial window expansion, as none of the increments in the four directions resulted in a gain in skill. This issue did not happen in a significant way for the other reanalyses and is here due to the high resolution of ERA5. High resolution generates in a noisier response surface in terms of skill, with local minima that trap the classic calibration. To address this issue, the classic+ calibration (Sect. \ref{sec:calibration}) was then used. It allows additional moves in the growth of the spatial windows, including increases of multiple grid points at once to get out of local minima. The classic+ calibration also ended up to be faster as it does not assess every grid point in the calculation of the relevance map. A global optimization technique, such as genetic algorithms \citep{Horton2017a}, would also efficiently overcome this issue. However, they are generally computationally intensive and too much time consuming for this comparison work. With the advent of high-resolution datasets, one should be aware of the potential pitfalls of calibration techniques that were developed on low-resolution datasets
 
-\citet{Horton2018b} showed that below 1\degree, the spatial resolution of the reanalyses generally has no significant impact on the performance of AMs. It is because, e.g., the geopotential at 500~hPa has a half-autocorrelation distance of about 1000~km \cite{Thiebaux1985}, and thus, a high resolution does not bring new information. It might, however, be different for moisture variables. ERA5 has the highest spatial resolution among global reanalyses. As the results in Sect. \ref{sec:results_skill} were obtained using the full spatial resolution (0.25\degree), an additional calibration was here performed using the same resolution as ERA-INT (0.75\degree) to quantify the contribution of the resolution to the gain in skill. Fig. \ref{fig:resolution} shows that degrading the resolution of ERA5 to ERA-INT resolution did not significantly impact the score. Although a higher model resolution is likely contributing to the improvements of ERA5 compared to ERA-INT, the high output resolution has no impact on AMs performance for the prediction of daily precipitation. We would have expected to see some gains for moisture variables, but they did not materialize. The gains are thus likely due to improvements in the forecast model, the assimilation scheme, and the assimilated data. While this conclusion is likely valid for predictands that are principally driven by large-scale predictors, it cannot be transposed to all applications. Indeed, when the phenomenon at hand is mainly driven by mesoscale predictors, such as lightning activity, the output spatial resolution does matter (unpublished results).
+\citet{Horton2018b} showed that below 1\degree, the spatial resolution of the reanalyses generally has no significant impact on the performance of AMs. It is because, e.g., the geopotential at 500~hPa has a half-autocorrelation distance of about 1000~km \cite{Thiebaux1985}, and thus, high resolution does not bring new information. It might, however, be different for moisture variables. ERA5 has the highest spatial resolution (0.25\degree) among global reanalyses. An additional calibration was here performed using the same resolution as ERA-INT (0.75\degree) to quantify the contribution of the resolution to the gain in skill. Fig. \ref{fig:resolution} shows that degrading the resolution of ERA5 to ERA-INT resolution (named ERA5 0.75 in the Fig.) did not significantly impact the score. Although a higher model resolution is likely contributing to the improvements of ERA5 compared to ERA-INT, the high output resolution has no impact on AMs performance for the prediction of daily precipitation. We would have expected to see some gains for moisture variables, but they did not materialize. The gains are thus likely due to improvements in the forecast model, the assimilation scheme, and the assimilated data. While this conclusion is likely valid for predictands that are principally driven by large-scale predictors, it cannot be transposed to all applications. Indeed, when the phenomenon at hand is mainly driven by mesoscale predictors, such as lightning activity, the output spatial resolution does matter (unpublished results).
 
 
-\subsection{Shared analog dates}
-\label{sec:results_shared_dates}
+\subsection{Comparing resulting parameters across reanalyses}
+\label{sec:results_parameters}
+
+Every AM has been calibrated independently for each reanalysis to be optimal for each configuration. In consequence, the resulting parameters differ from a setup to another. The parameters that were calibrated here are the number of analogs (Fig. \ref{fig:params-nb-analogs}) and the spatial windows on which the predictor fields are compared (Fig. \ref{fig:params-xwidth} for the zonal extent and Fig. \ref{fig:params-ywidth} for the meridional extent). Substantial differences can be observed between the datasets.
+
+The number of analogs varies non-homogeneously between methods and datasets (Fig. \ref{fig:params-nb-analogs}). For methods with a single level of analogy (2Z and 4Z), the three reanalyses with the lowest spatial resolution and the poorest prediction skill (Sect. \ref{sec:results_skill}) are characterized by a higher number of analogs, while the other datasets show similar distribution. A higher number of analogs can be related to the size of the spatial window and thus the spatial resolution, but it was also shown to be linked with the skill of the prediction and thus the quality of the dataset \citep{Horton2017b}. However, this cannot be transposed to all levels of analogy of more complex methods as interactions between these levels result in a more complex behaviour. For example, while there is no clear trend for the number of analogs for the atmospheric circulation in 2Z-2MI and 4Z-2MI, PT-2Z-4MI shows an inverse trend, i.e. more skilled datasets being related to a higher number of analogs on the first level of analogy (Z). This method emphasizes more moisture predictors with four predictors being used in the second level of analogy. A likely reason for such an inverted tendency comes from better moisture variables. 
+
+It is important to remember here that the number of analogs of each level of analogy is optimized jointly at the end of the calibration procedure by assessing multiple combinations. Thus, datasets with better moisture variables in the second level of analogy benefit from discriminating the analog candidates by making more use of them instead of circulation variables, and thus keep a higher number of analogs from the first level of analogy. The same pattern can be observed for PT-2Z-4W-4MI, the most complex method, for Z and even more so for W. These selections of larger samples of analog dates based on circulation variables correspond to datasets with higher spatial resolution and better skill, but only happen when the method has multiple levels of analogy. This suggests that parameters might not be optimal when transferred from one reanalysis to another, and that one should be careful when manually adapting parameters as the direction of change can be counter-intuitive. Moreover, some distributions are highly spread out, which makes the generalization of parameter values more difficult. The distributions for the last level of analogy are unimodal and less spread out than for precedent levels of analogy.
+
+The zonal extents of the spatial windows (Fig. \ref{fig:params-xwidth}) also show substantial differences between datasets depending on the AM. For circulation-only AMs (2Z and 4Z), the zonal extent tends to decrease with a higher spatial resolution of the reanalysis, even more so when four geopotential fields are considered (4Z). Also, all spatial windows tend to be substantially smaller for 4Z than for 2Z, with mean values that can be halved for certain datasets. Unlike for the number of analogs, the spatial windows were here calibrated sequentially for each level of analogy, without posterior re-calibrations. This results in distributions of the zonal extent of geopotential height fields that are relatively similar between the first level of analogy of more complex methods and AM based on Z only. Some variations can be observed and are due to different initial number of analogs at the start of the calibration procedure for 2Z-2MI and 4Z-2MI, as well as a different preselection of the candidate analogs for PT-2Z-4MI and PT-2Z-4W-4MI (based on temperature instead of a calendar preselection). This similarity of the spatial windows between AMs does not hold anymore when using a global optimization technique that optimizes jointly all parameters of the different levels of analogy, as spatial windows of the circulation variables are reduced when moisture variables are used on a second level of analogy \citep{Horton2018a}. Similar zonal extents between the methods does not here correspond to an optimal, but to a limitation of the sequential calibration procedure that can only be overcome by a global optimization technique.
+
+Moisture variables and vertical velocity are local variables that are characterized by smaller spatial windows \citep{BenDaoud2016, Horton2018a}. Their zonal extent decreases with the spatial resolution of the reanalysis, to the exception of MERRA-2 when four moisture variables are used (the reason has not been investigated). Also, the zonal extents of W are noticeably smaller than those of moisture variables for reanalyses with high resolution, i.e. CFSR and ERA5. Finally, while the distributions of the zonal extents are mostly unimodal for W and MI, higher resolution datasets show multimodal distributions for Z. Similarly to the number of analogs, the differences of the optimal spatial windows for the different reanalyses raise caution about the transferability of parameters between datasets. \citet{Horton2019} showed that the spatial windows have better be larger than too small, and thus it would be safer to transfer larger spatial windows from one dataset to another rather than the opposite. 
+
+The meridional extents of the spatial windows (Fig. \ref{fig:params-ywidth}) show similarity with the zonal extents in that MI and W are characterized by smaller extents that Z, with W being assessed on very small windows for CFSR and ERA5, and MERRA-2 diverging from the trend when four moisture variables are used. In contrast to the zonal extents, the meridional extents for Z do not show a clear trend with the spatial resolution. Also, when using more geopotential heights (from 2Z to 4Z), the meridional extent is not substantially reduced for most reanalyses, to the contrary of the zonal extent. The meridional extents show distributions that differ between datasets with no unique optimal range for Z. 
+
+The frequency of spatial windows for Z with very small zonal or meridional extents is rather high, all the more for higher resolution datasets. However, for most stations and reanalyses, these small values do not occur simultaneously, i.e. they represent thin and elongated spatial windows rather than small squared domains (not shown). Furthermore, when one dimension is small (zonal or meridional), the other can be situated in the upper part of the distribution. For example, the spatial windows with a minimal meridional extent for 4Z have a zonal extent mostly between 7 and 10\degree\ for ERA5. This is even more pronounced for PT-2Z-4W-4MI, where almost all the meridional extents above 8\degree\ correspond to very small zonal extents. However, the opposite is not true for this method, as the very small meridional extents correspond to zonal extents between 5 and 8\degree, so below the average. Three datasets (CERA-20C, ERA-INT, MERRA-2) show relatively small extents jointly in both directions for Z in PT-2Z-4W-4MI. The parameters for these methods were calibrated using the classic calibration instead of the classic+ version (Sect. \ref{sec:calibration}), and it is possible that they represent local minima. 
+
+As for the thin and zonally or meridionally elongated spatial windows, we cannot exclude that they result from limitations of the semi-automatic calibration techniques. However, it is interesting to note that the use of a global optimization technique (genetic algorithms) also resulted in some thin and zonally elongated spatial windows \citep{Horton2018a}. Additionally, there are spatial patterns showing some consistency with the different climatic regions in Switzerland. Here, depending on the reanalysis, the zonally elongated spatial windows are dominant for the stations located in the southern part of Switzerland, where southerly circulation is responsible for the most extreme precipitation events, and meridionally elongated spatial windows are much present in regions where westerlies are associated with heavy rainfall. While some optimal spatial windows for processing the gradients of the geopotential height are relatively large and rectangular, the relevance of thin and elongated spatial windows perpendicular to the flux associated with heavy precipitation can not be discarded.
+
+
+\subsection{How does ERA5 compare to other reanalyses?}
+\label{sec:results_skill}
+
+The skill scores of the different methods and reanalyses are shown in Fig. \ref{fig:comparison_values}. As discussed in \citet{Horton2018b}, there are clear differences between methods as more complex AMs generally performing better, but also between reanalyses in favor of modern full-input reanalyses. One can see here that ERA5 is systematically in the best performing reanalyses. When isolating the impact of the reanalysis by removing the influence of the methods and the stations (Fig. \ref{fig:comparison_relative}), the positive contribution of ERA5 to the skill score is even more clear, with the largest difference for the method PT-2Z-4MI. One can also see an improvement compared to ERA-INT.
+
+ERA5 was selected as the best reanalysis for about 50\% of the stations on average, with a minimum of 34.9\% for 4Z and a maximum of 78.7\% for PT-2Z-4MI. When considering the first two ranks, ERA5 was selected 75\% on average, with a minimum of 61.8\% for PT-2Z-4W-4MI and a maximum of 91.7\% for PT-2Z-4MI. There were no specific spatial patterns as to which stations performed best with ERA5, such as it was the case with other reanalyses in \citet{Horton2018b}. Even though ERA-INT was not systematically superseded by ERA5 for all stations, its performance is overall superior and we would recommend using it. Moreover, ERA-INT being discontinued, ERA5 is an obvious choice in most applications.
 
 The use of predictors from different datasets, and with distinct spatial windows, results in a different selection of analog dates. The percentage of identical analog dates for the different AMs over the VP is shown in Fig. \ref{fig:shared-dates}. This percentage decreases with the complexity of the AM, and range from a maximum of 74\% between NR-1 and NR-2 for the 2Z method to a minimum of 10\% between MERRA-2 and 20CR-2c for the PT-2Z-4W-4MI method. It is likely that if all reanalyses were compared over the same spatial windows, these numbers would be higher.
 
-As it could be expected, ERA5 shared some similarities in the selection of analog dates with ERA-INT, but not to an extent that is significantly different from the other modern full-input reanalyses. Indeed, the percentage of shared analog dates is of the same order of magnitude as with CFSR and JRA-55, which are the two reanalyses produced by models with a high spatial resolution (Table \ref{table:datasets}), but with fewer vertical levels. It is worth noting that JRA-55, which presents here strong similarities with ERA5 in terms of selected analog dates for Switzerland, has an output resolution that is five times lower (1.25\degree). It should be noted, however, that JRA-55 shares more analog dates with ERA-INT than with ERA5. 
-
-
-\subsection{Parameter space}
-\label{sec:results_parameters}
-
-Every AM has been calibrated independently for each reanalysis to provide a performance that is optimal for each configuration. In consequence, the optimal parameters differ from a setup to another. The parameter that were calibrated here are the number of analog (Fig. \ref{fig:params-nb-analogs}) and the spatial windows on which the predictor fields are compared (Fig. \ref{fig:params-xwidth} for the zonal extent and Fig. \ref{fig:params-ywidth} for the meridional extent). Substantial differences can be observed between the datasets.
-
-The number of analogs varies non-homogeneously between methods and datasets (Fig. \ref{fig:params-nb-analogs}). For methods with a single level of analogy (2Z and 4Z), the three reanalyses with the lowest spatial resolution and the poorest prediction skill (Sect. \ref{sec:results_skill}) are characterized by a higher number of analogs, while the other datasets show similar distribution. A higher number of analogs can be related to the size of the spatial window and thus the spatial resolution, but it was also shown to be linked with the skill of the prevision and thus the quality of the dataset \citep{Horton2017b}. However, this cannot be transposed to all levels of analogy of more complex methods as interactions between these levels result in a more complex behaviour. For example, while there is no clear trend for the number of analogs for the atmospheric circulation for 2Z-2MI and 4Z-2MI, PT-2Z-4MI show an inverse trend of more skilled datasets being related to a higher number of analogs on the first level of analogy (Z). This method emphasizes more moisture predictors with four predictors being used in the second level of analogy. A likely reason for such an inverted tendency comes from better moisture variables. 
-
-It is important to remember here that the number of analogs of each level of analogy is optimized jointly at the end of the calibration procedure by assessing multiple combinations. Thus, datasets with better moisture variables in the second level of analogy benefit from discriminating the analog candidates using these instead of circulation variables, and thus keep a higher number of analogs from the first level of analogy. The same pattern can be observed for PT-2Z-4W-4MI, the most complex method, for Z and even more so for W. These selections of larger samples of analog dates based on circulation variables correspond to datasets with higher spatial resolution and better skill, but only when the method has multiple levels of analogy. This suggest that parameters might not be optimal when transferred from one reanalysis to another, and that one should be careful when manually adapting parameters as the direction of change can be counter-intuitive. Moreover, some distributions are highly spread out, which makes the generalization of parameter values more difficult. The distributions for the last level of analogy are unimodal and less spread out than for precedent levels of analogy.
-
-The zonal extent of the spatial windows (Fig. \ref{fig:params-xwidth} also show substantial differences between datasets depending on the AM. For circulation-only AM (2Z and 4Z), the zonal extent tends to decrease with a higher spatial resolution of the reanalysis, even more so when four geopotential fields are considered (4Z). Also, all spatial windows tend to be substantially smaller for 4Z than for 2Z, with mean values that can be halved for certain datasets. Unlike for the number of analogs, the spatial windows were here calibrated sequentially for each level of analogy, without posterior re-calibrations. This results in distributions of the zonal extent of geopotential height fields that are relatively similar between the first level of analogy of more complex methods and AM based on Z only. The differences that can be observed are due to different initial number of analogs at the start of the calibration procedure for 2Z-2MI and 4Z-2MI, as well as a different preselection of the candidate analogs for PT-2Z-4MI and PT-2Z-4W-4MI. This is however not the case anymore when using a global optimization technique that optimizes jointly all parameters of the different levels of analogy, with spatial windows of the circulation variables being reduced when moisture variables are used on a second level of analogy \citep{Horton2018a}. Similar zonal extents between the methods does not here correspond to an optimal, but to a limitation of the sequential calibration procedure that can only be overcome by a global optimization technique.
-
-Moisture variables and vertical velocity are local variables that are characterized by smaller spatial windows \citep{BenDaoud2016, Horton2018a}. Their zonal extent decreases with the spatial resolution of the reanalysis, to the exception of MERRA-2 when four moisture variables are used (the reason has not been investigated). Also, the zonal extents of W is noticeably smaller than those of moisture variables for reanalyses with high resolution, i.e. CFSR and ERA5. Finally, while the distributions of the zonal extents are mostly unimodal for W and MI, higher resolution datasets show multimodal distributions for Z. Similarly to the number of analogs, the differences of the optimal spatial windows for the different reanalyses raise caution about the transferability of parameters between datasets. As shown by \citet{Horton2019}, it would be safer to transfer larger spatial windows from one dataset to another rather than the opposite. 
-
-The meridional extent of the spatial windows (Fig. \ref{fig:params-ywidth}) show similarity with the zonal extent in that MI and W are characterized by smaller extents that Z, with W being assessed on very small windows for CFSR and ERA5, and MERRA-2 diverging from the trend when four moisture variables are used. In contrast to the zonal extents, the meridional extents for Z do show a relationship with the spatial resolution and show distributions that differ between datasets with a tendency of being more multimodal than for zonal extents. Indeed, the frequency of spatial windows with a minimal meridional extent is rather high, all the more for ERA5. 
+As it could be expected, ERA5 shared some similarities in the selection of analog dates with ERA-INT, but not to an extent that is significantly different from the other modern full-input reanalyses. Indeed, the percentage of shared analog dates is of the same order of magnitude as with CFSR and JRA-55, which are the two reanalyses produced by models with a high spatial resolution (Table \ref{table:datasets}), but with fewer vertical levels. It is worth noting that JRA-55, which presents here strong similarities with ERA5 in terms of selected analog dates for Switzerland, has an output resolution that is five times lower (1.25\degree).
 
 
 \section{Conclusions}
@@ -320,59 +323,60 @@ The author has declared no conflict of interest.
 \pagebreak
 
 \begin{figure}
-%	\includegraphics[width=80mm]{figure-1.jpg}\\
+	\includegraphics[width=80mm]{figure-1.jpg}\\
 	\caption{Map of the 301 precipitation stations with good data coverage of the period 1981--2010. Background map: \textcopyright\ SwissTopo. Modified from \citet{Horton2018b}.}
 	\label{fig:stations}
 \end{figure}
 
 \begin{figure}[bt]
 	\centering
-%	\includegraphics[width=\textwidth]{figure-2.pdf}
-	\caption{CRPSS for all stations and all considered AMs and reanalysis datasets on the VP. A higher CRPSS means better performance. The parameters of the AMs were calibrated for every station, every dataset, and every method. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point, which is no more than 1.5 times the interquartile range.}
-	\label{fig:comparison_values}
-\end{figure}
-
-\begin{figure}[bt]
-	\centering
-%	\includegraphics[width=\textwidth]{figure-3.pdf}
-	\caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. 2.}
-	\label{fig:comparison_relative}
-\end{figure}
-
-\begin{figure}[bt]
-	\centering
-%	\includegraphics[width=100mm]{figure-4.pdf}
-	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as a failed calibration of AMs with ERA5 (gray; see explanation in text). The impact of the reanalysis on performance has been isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets (excluding the failed calibration), per station and per method. Same conventions as Fig. 2.}
+	\includegraphics[width=100mm]{figure-4.pdf}
+	\caption{Comparison of ERA-INT and ERA5 at 0.25\degree\ and 0.75\degree\ as well as a failed calibration of AMs with ERA5 (gray; named "ERA5 0.25 issues"; see explanation in text). The performance is given by the CRPSS for all stations and all considered AMs and reanalyses on the VP. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point, which is no more than 1.5 times the interquartile range.}
 	\label{fig:resolution}
-\end{figure}
-
-\begin{figure}[bt]
-	\centering
-%	\includegraphics[width=120mm]{figure-5.pdf}
-	\caption{Percentage of identical analog dates, for different AMs, selected when using the reanalyses in columns that were also found when using the reanalyses in rows. The values were averaged for all stations on the VP.}
-	\label{fig:shared-dates}
 \end{figure}
 
 \begin{figure}[btp]
 	\centering
-%	\includegraphics[width=115mm]{figure-6.pdf}
+	\includegraphics[width=115mm]{figure-6.pdf}
 	\caption{Calibrated number of analogs for the different methods and reanalyses and for all stations. The reanalyses are ordered by increasing spatial resolution. The triangles represent the mean values of all stations.}
 	\label{fig:params-nb-analogs}
 \end{figure}
 
 \begin{figure}[btp]
 	\centering
-%	\includegraphics[width=115mm]{figure-7.pdf}
-	\caption{Calibrated zonal extents (in degrees) of the spatial windows for the different methods and reanalyses and for all stations. Same conventions as Fig. \ref{fig:params-nb-analogs}.}
+	\includegraphics[width=115mm]{figure-7.pdf}
+	\caption{Calibrated zonal extents (in degrees) of the spatial windows for the different methods and reanalyses and for all stations. Same conventions as Fig. \protect\ref{fig:params-nb-analogs}.}
 	\label{fig:params-xwidth}
 \end{figure}
 
 \begin{figure}[btp]
 	\centering
-%	\includegraphics[width=115mm]{figure-8.pdf}
-	\caption{Calibrated meridional extents (in degrees) of the spatial windows for the different methods and reanalyses and for all stations. Same conventions as Fig. \ref{fig:params-nb-analogs}.}
+	\includegraphics[width=115mm]{figure-8.pdf}
+	\caption{Calibrated meridional extents (in degrees) of the spatial windows for the different methods and reanalyses and for all stations. Same conventions as Fig. \protect\ref{fig:params-nb-analogs}.}
 	\label{fig:params-ywidth}
 \end{figure}
+
+\begin{figure}[bt]
+	\centering
+	\includegraphics[width=\textwidth]{figure-2.pdf}
+	\caption{CRPSS for all stations and all considered AMs and reanalysis datasets on the VP. A higher CRPSS means better performance. The parameters of the AMs were calibrated for every station, every dataset, and every method. The boxes show the 25th, 50th, and 75th percentiles. The whiskers extend to the most extreme data point, which is no more than 1.5 times the interquartile range.}
+	\label{fig:comparison_values}
+\end{figure}
+
+\begin{figure}[bt]
+	\centering
+	\includegraphics[width=\textwidth]{figure-3.pdf}
+	\caption{Impact of the reanalysis dataset on performance, isolated by processing the improvement in CRPSS for one dataset compared to the mean performance on all datasets, per station and method. Note that the methods cannot be compared here, only the datasets. Same conventions as Fig. 2.}
+	\label{fig:comparison_relative}
+\end{figure}
+
+\begin{figure}[bt]
+	\centering
+	\includegraphics[width=120mm]{figure-5.pdf}
+	\caption{Percentage of identical analog dates, for different AMs, selected when using the reanalyses in columns that were also found when using the reanalyses in rows. The values were averaged for all stations on the VP.}
+	\label{fig:shared-dates}
+\end{figure}
+
 
 
 \end{document}
